# engenharia-de-dados

./: mvp.md  observacoes.md  pyproject.toml  readme.md
dados/IBGE/estatisticas/economicas/parquet/: .part-00000-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00001-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00002-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00003-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00004-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00005-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00006-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00007-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00008-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  .part-00009-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet.crc  part-00000-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00001-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00002-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00003-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00004-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00005-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00006-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  part-00007-35c66f32-beb5-483f-8744-8b53126ce518-c000.snappy.parquet  (+2 more)
notebooks/: analise.ipynb  teste.json  teste_parquet.ipynb
